--- a/trmua-utils/MainWindow.xaml
+++ b/trmua-utils/MainWindow.xaml
@@ -25,7 +25,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Name="rotate" IsEnabled="True" Height="25" Margin="0 0 5 0" FontSize="12">Rotate</Button>
+                    <Button Grid.Column="0" Name="rotate" IsEnabled="True" Height="25" Margin="0 0 5 0" FontSize="12" Click="RotateFile_Click">Rotate</Button>
                     <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="25" Margin="5 0 5 0" FontSize="12">Remove Thumbs</Button>
                     <Button Grid.Column="2" Name="refresh" IsEnabled="True" Height="25" Margin="5 0 0 0" FontSize="12">Refresh</Button>
                 </Grid>
@@ -33,20 +33,26 @@
                 <Label Grid.Row="2" FontSize="14" Margin="5 0 5 0">Logs:</Label>
 
                 <Border Grid.Row="3" Margin="5" BorderThickness="1" BorderBrush="Gray">
-                    <TextBlock Name="outputTextBlock" Background="#E8E9EB" Foreground="White" Padding="5" TextWrapping="Wrap" VerticalAlignment="Stretch"/>
+                    <TextBlock Name="outputTextBlock" Background="#E8E9EB" Padding="5" TextWrapping="Wrap" VerticalAlignment="Stretch"/>
                 </Border>
 
                 <Button Grid.Row="4" Name="Stop" Height="25" Margin="5 10" FontSize="12" FontWeight="Bold" HorizontalAlignment="Center" Width="200">Stop</Button>
             </Grid>
         </TabItem>
-        <TabItem Header="Settings">
+        <TabItem Header="Settings" Height="22" Margin="-2,0,-2,0" VerticalAlignment="Bottom">
             <StackPanel>
                 <Label FontSize="16">Globals</Label>
                 <StackPanel Orientation="Horizontal">
                     <Label>.thumbs Folder:</Label>
-                    <TextBox Name="txtFolderPath" Width="200" Margin="5" Text="Please select a folder" IsEnabled="False"></TextBox>
-                    <Button Content="Browse..." Width="75" Margin="5" Click="BrowseFolder_Click"/>
+                    <TextBox Name="thumbsFolderPath" Width="200" Margin="5" Text="Please select a folder" IsEnabled="False"></TextBox>
+                    <Button Name="thumbs" Content="Browse..." Width="75" Margin="5" Click="ThumbsFolder_Click"/>
                 </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label>Rotatable Folder:</Label>
+                    <TextBox Name="rotateFolderPath" Width="200" Margin="5" Text="Please select a folder" IsEnabled="False"></TextBox>
+                    <Button Name="Rotate" Content="Browse..." Width="75" Margin="5" Click="RotateFolder_Click"/>
+                </StackPanel>
+
             </StackPanel>
         </TabItem>
     </TabControl>
