--- a/trmua-utils/MainWindow.xaml
+++ b/trmua-utils/MainWindow.xaml
@@ -26,7 +26,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Button Grid.Column="0" Name="rotate" IsEnabled="True" Height="25" Margin="0 0 5 0" FontSize="12" Click="RotateFile_Click">Rotate</Button>
-                    <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="25" Margin="5 0 5 0" FontSize="12">Remove Thumbs</Button>
+                    <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="25" Margin="5 0 5 0" FontSize="12" Click="removeThumbs_Click">Remove Thumbs</Button>
                     <Button Grid.Column="2" Name="refresh" IsEnabled="True" Height="25" Margin="5 0 0 0" FontSize="12">Refresh</Button>
                 </Grid>
 
@@ -52,6 +52,7 @@
                     <TextBox Name="rotateFolderPath" Width="200" Margin="5" Text="Please select a folder" IsEnabled="False"></TextBox>
                     <Button Name="Rotate" Content="Browse..." Width="75" Margin="5" Click="RotateFolder_Click"/>
                 </StackPanel>
+                
 
             </StackPanel>
         </TabItem>
