--- a/trmua-utils/MainWindow.xaml
+++ b/trmua-utils/MainWindow.xaml
@@ -26,8 +26,8 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Button Grid.Column="0" Name="rotate" IsEnabled="True" Height="25" Margin="0 0 5 0" FontSize="12" Click="RotateFile_Click">Rotate</Button>
-                    <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="25" Margin="5 0 5 0" FontSize="12" Click="removeThumbs_Click">Remove Thumbs</Button>
-                    <Button Grid.Column="2" Name="refresh" IsEnabled="True" Height="25" Margin="5 0 0 0" FontSize="12">Refresh</Button>
+                    <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="25" Margin="5 0 5 0" FontSize="12" Click="RemoveThumbs_Click">Remove Thumbs</Button>
+                    <Button Grid.Column="2" Name="refresh" IsEnabled="True" Height="25" Margin="5 0 0 0" FontSize="12" Click="Refresh_Click">Refresh</Button>
                 </Grid>
 
                 <Label Grid.Row="2" FontSize="14" Margin="5 0 5 0">Logs:</Label>
