--- a/trmua-utils/MainWindow.xaml
+++ b/trmua-utils/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:trmua_utils"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="400"
-        PreviewLostKeyboardFocus="Window_PreviewLostKeyboardFocus">
+        PreviewLostKeyboardFocus="Window_PreviewLostKeyboardFocus"
+        ResizeMode="CanMinimize">
+       
     <TabControl>
         <TabItem Header="Utils">
             <Grid>
@@ -32,7 +34,7 @@
                     </Grid.ColumnDefinitions>
 
                     <Button Grid.Column="0" Name="rotate" IsEnabled="True" Height="34" Margin="0 0 5 0" FontSize="12" Click="RotateFile_Click">Rotate</Button>
-                    <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="34" Margin="5 0 5 0" FontSize="12" Click="removeThumbs_Click">Remove Thumbs</Button>
+                    <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="34" Margin="5 0 5 0" FontSize="12" Click="RemoveThumbs_Click">Remove Thumbs</Button>
                     <Button Grid.Column="2" Name="refresh" IsEnabled="True" Height="34" Margin="5 0 0 0" FontSize="12">Refresh</Button>
 
                 </Grid>
