--- a/trmua-utils/MainWindow.xaml
+++ b/trmua-utils/MainWindow.xaml
@@ -35,14 +35,14 @@
 
                     <Button Grid.Column="0" Name="rotate" IsEnabled="True" Height="34" Margin="0 0 5 0" FontSize="12" Click="RotateFile_Click">Rotate</Button>
                     <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="34" Margin="5 0 5 0" FontSize="12" Click="RemoveThumbs_Click">Remove Thumbs</Button>
-                    <Button Grid.Column="2" Name="refresh" IsEnabled="True" Height="34" Margin="5 0 0 0" FontSize="12">Refresh</Button>
+                    <Button Grid.Column="2" Name="refresh" IsEnabled="True" Height="34" Margin="5 0 0 0" FontSize="12" Click="Refresh_Click">Refresh</Button>
 
                 </Grid>
 
                 <Label Grid.Row="1" FontSize="14" Margin="5,35,5,260" Grid.ColumnSpan="2" Grid.RowSpan="3">Logs:</Label>
 
                 <Border Grid.Row="3" Margin="5,5,5,5" BorderThickness="1" BorderBrush="Gray" Grid.ColumnSpan="2">
-                    <ScrollViewer>
+                    <ScrollViewer VerticalScrollBarVisibility="Visible" CanContentScroll="True" PanningMode="VerticalFirst" >
                         <TextBlock Name="outputTextBlock" Background="#E8E9EB" Padding="5" TextWrapping="Wrap" VerticalAlignment="Stretch"/>
                     </ScrollViewer>
                 </Border>
