--- a/trmua-utils/MainWindow.xaml
+++ b/trmua-utils/MainWindow.xaml
@@ -8,14 +8,10 @@
         Title="MainWindow" Height="450" Width="400"
         PreviewLostKeyboardFocus="Window_PreviewLostKeyboardFocus"
         ResizeMode="CanMinimize">
-       
+
     <TabControl>
         <TabItem Header="Utils">
             <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="371*"/>
-                    <ColumnDefinition Width="23*"/>
-                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -23,48 +19,44 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
+                <Label Grid.Row="0" FontSize="19">_Utilities</Label>
 
-                <Label Grid.Row="0" FontSize="19" Grid.ColumnSpan="2">_Utilities</Label>
-
-                <Grid Grid.Row="1" Margin="5,5,5,5" Grid.ColumnSpan="2">
+                <Grid Grid.Row="1" Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-
                     <Button Grid.Column="0" Name="rotate" IsEnabled="True" Height="34" Margin="0 0 5 0" FontSize="12" Click="RotateFile_Click">Rotate</Button>
                     <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="34" Margin="5 0 5 0" FontSize="12" Click="RemoveThumbs_Click">Remove Thumbs</Button>
                     <Button Grid.Column="2" Name="refresh" IsEnabled="True" Height="34" Margin="5 0 0 0" FontSize="12" Click="Refresh_Click">Refresh</Button>
-
                 </Grid>
 
-                <Label Grid.Row="1" FontSize="14" Margin="5,35,5,260" Grid.ColumnSpan="2" Grid.RowSpan="3">Logs:</Label>
+                <Label Grid.Row="2" FontSize="14" Margin="5,5,5,0">Logs:</Label>
 
-                <Border Grid.Row="3" Margin="5,5,5,5" BorderThickness="1" BorderBrush="Gray" Grid.ColumnSpan="2">
-                    <ScrollViewer VerticalScrollBarVisibility="Visible" CanContentScroll="True" PanningMode="VerticalFirst" >
+                <Border Grid.Row="3" Margin="5" BorderThickness="1" BorderBrush="Gray">
+                    <ScrollViewer x:Name="LogScrollViewer" VerticalScrollBarVisibility="Visible" CanContentScroll="True" PanningMode="VerticalFirst">
                         <TextBlock Name="outputTextBlock" Background="#E8E9EB" Padding="5" TextWrapping="Wrap" VerticalAlignment="Stretch"/>
                     </ScrollViewer>
                 </Border>
 
-                <Button Grid.Row="4" Name="Stop" Height="34" Margin="97,10,0,10" FontSize="12" FontWeight="Bold" HorizontalAlignment="Left" Width="200" Click="Stop_Click">Stop</Button>
+                <Button Grid.Row="4" Name="Stop" Height="34" Margin="5,10" FontSize="12" FontWeight="Bold" HorizontalAlignment="Center" Width="200" Click="Stop_Click">Stop</Button>
             </Grid>
         </TabItem>
-        <TabItem Header="Settings" Height="34" Margin="-2,0,-2,0" VerticalAlignment="Bottom">
-            <StackPanel>
+
+        <TabItem Header="Settings" Height="34" VerticalAlignment="Bottom">
+            <StackPanel Margin="10">
                 <Label FontSize="16">Globals</Label>
-                <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                     <Label>.thumbs Folder:</Label>
-                    <TextBox Name="thumbsFolderPath" Width="200" Margin="5" Text="Please select a folder" IsEnabled="False"></TextBox>
-                    <Button Name="thumbs" Content="Browse..." Width="75" Margin="5" Click="ThumbsFolder_Click"/>
+                    <TextBox Name="thumbsFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False"/>
+                    <Button Name="thumbs" Content="Browse..." Width="75" Click="ThumbsFolder_Click"/>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                     <Label>Rotatable Folder:</Label>
-                    <TextBox Name="rotateFolderPath" Width="200" Margin="5" Text="Please select a folder" IsEnabled="False"></TextBox>
-                    <Button Name="Rotate" Content="Browse..." Width="75" Margin="5" Click="RotateFolder_Click"/>
+                    <TextBox Name="rotateFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False"/>
+                    <Button Name="Rotate" Content="Browse..." Width="75" Click="RotateFolder_Click"/>
                 </StackPanel>
-
-
             </StackPanel>
         </TabItem>
     </TabControl>
