--- a/trmua-utils/MainWindow.xaml
+++ b/trmua-utils/MainWindow.xaml
@@ -19,7 +19,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" FontSize="19">_Utilities</Label>
+                <Label Grid.Row="0" FontSize="19" FontWeight="Black">_Utilities</Label>
 
                 <Grid Grid.Row="1" Margin="5">
                     <Grid.ColumnDefinitions>
@@ -36,9 +36,19 @@
 
                 </Grid>
 
-                <Label Grid.Row="2" FontSize="14" Margin="5,5,5,0">Logs:</Label>
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" FontSize="14" Margin="5,5,5,0" FontWeight="Bold">Logs:</Label>
+                    <Button Grid.Column="2" Name="ClearLogs" Content="Clear Logs" Margin="0,5,5,0" Padding="5,2" Click="ClearLogs_Click"/>
+                    <ProgressBar Grid.Column="1" Name="ProgressBar" Width="250" Height="15"></ProgressBar>               
+                </Grid>
 
-                <Border Grid.Row="3" Margin="5,5,5,5" BorderThickness="1" BorderBrush="Gray" Grid.ColumnSpan="2">
+
+                <Border Grid.Row="3" Margin="5,5,5,5" BorderThickness="1" BorderBrush="Gray">
                     <ScrollViewer Name="LogScrollViewer" VerticalScrollBarVisibility="Visible" CanContentScroll="True" PanningMode="VerticalFirst">
                         <TextBlock Name="outputTextBlock" Background="#E8E9EB" Padding="5" TextWrapping="Wrap" VerticalAlignment="Stretch"/>
                     </ScrollViewer>
@@ -50,7 +60,7 @@
 
         <TabItem Header="Settings" Height="34" VerticalAlignment="Bottom">
             <StackPanel Margin="10">
-                <Label FontSize="16">Globals</Label>
+                <Label FontSize="16" FontWeight="Bold">Globals</Label>
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                     <Label>.thumbs Folder:</Label>
                     <TextBox Name="thumbsFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False"/>
