--- a/trmua-utils/MainWindow.xaml
+++ b/trmua-utils/MainWindow.xaml
@@ -29,8 +29,8 @@
                     </Grid.ColumnDefinitions>
 
 
-                    <Button Grid.Column="0" Name="rotate" IsEnabled="True" Height="34" Margin="0 0 5 0" FontSize="12" Click="RotateFile_Click">Rotate</Button>
-                    <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="34" Margin="5 0 5 0" FontSize="12" Click="RemoveThumbs_Click">Remove Thumbs</Button>
+                    <Button Grid.Column="0" Name="rotate" IsEnabled="True" Height="34" Margin="0 0 5 0" FontSize="12" Click="RotateFile_Click" ToolTip="Rotates current image. Must have target photo open.Must have target folder specified in the settings.">Rotate</Button>
+                    <Button Grid.Column="1" Name="removeThumbs" IsEnabled="True" Height="34" Margin="5 0 5 0" FontSize="12" Click="RemoveThumbs_Click" ToolTip="Batch removes all files with the .thumb extention in a given folder.Must have target folder specified in the settings.">Remove Thumbs</Button>
                     <Button Grid.Column="2" Name="refresh" IsEnabled="True" Height="34" Margin="5 0 0 0" FontSize="12" Click="Refresh_Click">Refresh</Button>
 
 
@@ -54,7 +54,7 @@
                     </ScrollViewer>
                 </Border>
 
-                <Button Grid.Row="4" Name="Stop" Height="34" Margin="5,10" FontSize="12" FontWeight="Bold" HorizontalAlignment="Center" Width="200" Click="Stop_Click">Stop</Button>
+                <Button Grid.Row="4" Name="Stop" Height="34" Margin="5,10" FontSize="12" FontWeight="Bold" HorizontalAlignment="Center" Width="200" Click="Stop_Click" ToolTip="Stops all running tasks.">Stop</Button>
             </Grid>
         </TabItem>
 
@@ -63,12 +63,12 @@
                 <Label FontSize="16" FontWeight="Bold">Globals</Label>
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                     <Label>.thumbs Folder:</Label>
-                    <TextBox Name="thumbsFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False"/>
+                    <TextBox Name="thumbsFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False" ToolTip="Target folder where .thumbs live. Usually labeled In-Progress Maps"/>
                     <Button Name="thumbs" Content="Browse..." Width="75" Click="ThumbsFolder_Click"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                     <Label>Rotatable Folder:</Label>
-                    <TextBox Name="rotateFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False"/>
+                    <TextBox Name="rotateFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False" ToolTip="Target folder where main tiff files go. Usually the ScanApplications folder."/>
                     <Button Name="Rotate" Content="Browse..." Width="75" Click="RotateFolder_Click"/>
                 </StackPanel>
             </StackPanel>
