--- a/trmua-utils/MainWindow.xaml
+++ b/trmua-utils/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:trmua_utils"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="400"
+        Title="MainWindow" Height="450" Width="425"
         PreviewLostKeyboardFocus="Window_PreviewLostKeyboardFocus"
         ResizeMode="CanMinimize">
 
@@ -63,13 +63,13 @@
                 <Label FontSize="16" FontWeight="Bold">Globals</Label>
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                     <Label>.thumbs Folder:</Label>
-                    <TextBox Name="thumbsFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False" ToolTip="Target folder where .thumbs live. Usually labeled In-Progress Maps"/>
-                    <Button Name="thumbs" Content="Browse..." Width="75" Click="ThumbsFolder_Click"/>
+                    <TextBox Name="thumbsFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False" />
+                    <Button Name="thumbs" Content="Browse..." Width="75" Click="ThumbsFolder_Click" ToolTip="Target folder where .thumbs live. Usually labeled In-Progress Maps"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                     <Label>Rotatable Folder:</Label>
-                    <TextBox Name="rotateFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False" ToolTip="Target folder where main tiff files go. Usually the ScanApplications folder."/>
-                    <Button Name="Rotate" Content="Browse..." Width="75" Click="RotateFolder_Click"/>
+                    <TextBox Name="rotateFolderPath" Width="200" Margin="5,0" Text="Please select a folder" IsEnabled="False" />
+                    <Button Name="Rotate" Content="Browse..." Width="75" Click="RotateFolder_Click" ToolTip="Target folder where main tiff files go. Usually the ScanApplications folder."/>
                 </StackPanel>
             </StackPanel>
         </TabItem>
